<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SetActivity" >

    <TextView
        android:id="@+id/lbCommNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commNumber" />

    <EditText
        android:id="@+id/etCommNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lbCommNumStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" " />

    <TextView
        android:id="@+id/lbBaud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baudrate" />

    <EditText
        android:id="@+id/etBaud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/lbCommBaudStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" " />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lbCts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cts" />

        <TextView
            android:id="@+id/lbRts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rts" />

        <TextView
            android:id="@+id/lbBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Open" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GPIO Number:" />

        <EditText
            android:id="@+id/etGpioNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnGpioHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="High" />

        <Button
            android:id="@+id/btnGpioLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Low" />

    </LinearLayout>

</LinearLayout>